fixed eye visibility for both fields

--- a/src/components/Custom/CustomInput/CustomInput.module.scss
+++ b/src/components/Custom/CustomInput/CustomInput.module.scss
@@ -1,3 +1,3 @@
 .error_label {
-    @apply text-red-600 text-xs place-self-center
+    @apply text-red-600 text-[14px] place-self-center;
 }
